fix: change list in "Skills" section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 I'm 25 years old. Сurrently employed as a lawyer in a bank, but decided to change my occupation. 
 <br>Started my way by taking the course "JavaScript/Front-end" provided by The Rolling Scopes School.
 <br>I like to explore new information and constantly learning.
-<ul id="Skills"><h2>Skills:</h2>
+<h2 id="Skills"><ul>Skills:</h2>
   <li>Git/GitHub</li>
   <li>HTML</li>
   <li>CSS</li>
